--- a/patients_service/src/main/resources/application.properties
+++ b/patients_service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=patients_service
-spring.data.mongodb.uri=mongodb://mongo:27017/patients_service
+spring.data.mongodb.uri=mongodb://localhost:27017/patients_service
